<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidparkeredwards.washboard.OptionsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAccent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_zip"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zip_edittext"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_weight="1"
            android:id="@+id/update_button"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_intro"
            android:id="@+id/options_intro"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/option_radios">

            <RadioButton
                android:id="@+id/single_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:padding="5dp"
                android:text="@string/option1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <RadioButton
                android:id="@+id/standard_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_accent"
                android:padding="5dp"
                android:text="@string/option2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <RadioButton
                android:id="@+id/enterprise_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:padding="5dp"
                android:text="@string/option3"/>
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footnotes"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
    </LinearLayout>
    </ScrollView>


</FrameLayout>
