<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidparkeredwards.washboard.InstructionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- TODO: Update blank fragment layout -->

            <!--
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sort_instructions" /> -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/pickup_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_pickup_address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/pickup_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/pickup_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_zip"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/soiled_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soiled" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/soiled_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/details"
                    android:inputType="text"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cold_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/cold_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/details"
                    android:inputType="text"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/softener_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/softener" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/softener_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/details"
                    android:inputType="text"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:visibility="gone" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_instructions_text" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/additional_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/additional_instructions_hint"
                    android:inputType="text"
                    android:maxLines="8"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="150dp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
